--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Audopt</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 </head>
+
 <body>
 
-<%= yield %>
+  <nav>
+  <div class="nav-wrapper lime darken-3">
+    <a href="#" class="brand-logo">Audopt</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="sass.html">Animais</a></li>
+      <li><a href="badges.html">Perfil</a></li>
+      <li><a href="collapsible.html">Outras Coisas</a></li>
+    </ul>
+  </div>
+</nav>
+
+  <%= yield %>
 
 </body>
 </html>
