--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_field :password %>
   </div>
   <div class="field">
+    <%= f.label :password_confirmation %><br>
+    <%= f.text_field :password_confirmation %>
+  </div>
+  <div class="field">
     <%= f.label :address %><br>
     <%= f.text_area :address %>
   </div>
