Improving visual and creating seeds

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -10,7 +10,12 @@
       </ul>
     </div>
   <% end %>
+----------------------
+  <%= params[:id] %>
+  -------------------
+  <%= hidden_field_tag :user_id, params[:id] %>
 
+  <%= params[:user_id] %>
   <div class="field">
     <%= f.label :reason %><br>
     <%= f.text_area :reason %>
