--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-profile-image {
+  border-radius: 100%;
+}
+
+.user-show {
+  margin: 2% 0 0 42%;
+}
+
+#user-attributes {
+  width: none !important;
+  margin-left: 9%;
+
+}
