--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="sass.html">Animais</a></li>
       <li><a href="badges.html">Perfil</a></li>
-      <li><a href="collapsible.html">Outras Coisas</a></li>
+      <% if logged_in? %>
+        <li><%= "Bem vindo, %s" % current_user.name %></li>
+      <% end %>
     </ul>
   </div>
 </nav>
