--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,6 +39,12 @@
     <%= f.label :birth %><br>
     <%= f.datetime_select :birth %>
   </div>
+	<div class="form-group">
+    <%= f.label :avatar, class: 'col-sm-2 control-label'  %>
+    <div class="col-sm-6">
+    	<%= f.file_field :avatar %>
+    </div>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
