Adding mark post if is interested

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,9 @@
       <tr><td>Nome:<%= @user.name%></td></tr>
       <tr><td>E-mail:<%= @user.email%></td></tr>
       <tr><td>Telefone:<%= @user.phone%></td></tr>
+      <%if !(@user.interests.blank?) %>
+        <tr><td>Interressados:<%= @user.interests%></td></tr>
+      <%end%>
     </table>
 
     <%= link_to 'Denunciar usuário',
