--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,13 @@
   <%= @post.location %>
 </p>
 
+<% if @interested %>
+	<%= link_to 'Desmarca como Interresado', interest_post_path(@post, type: "uninterested"), method: :put%>
+<% else %>
+	<%= link_to 'Marca como Interresado', interest_post_path(@post, type: "interested"), method: :put%>
+<% end %>
+
+
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
