Refactoring login page and navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,9 @@
   <div class="nav-wrapper lime darken-3">
     <a href="#" class="brand-logo">Audopt</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Animais</a></li>
-      <li><a href="badges.html">Perfil</a></li>
       <% if logged_in? %>
-        <li><%= "Bem vindo, %s" % current_user.name %></li>
+        <li><%= link_to "Publicações", posts_path %></li>
+        <li><%= link_to "Bem vindo, %s" % current_user.name, user_path(current_user)%></li>
       <% end %>
     </ul>
   </div>
