--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -35,5 +35,10 @@
   <%= @animal.size %>
 </p>
 
+<p>
+  <strong>Adopted:</strong>
+  <%= @animal.adopted %>
+</p>
+
 <%= link_to 'Edit', edit_animal_path(@animal) %> |
 <%= link_to 'Back', animals_path %>
