--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,11 +20,12 @@
 }
 
 #interested-btn {
-  width: 10%;
+  width: 200px;
   margin-left: 43%;
 }
 
 #uninterested-btn {
-  width: 10%;
-  margin-left: 43%;
+  width: 400px;
+  margin-left: 40%;
+  text-overflow: break-line;
 }
