--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
 </table>
 
 <% if @interested %>
-  <%= link_to 'Não me interesso mais', interest_post_path(@post, type: "uninterested", method: :put), class: 'btn', id: 'uninterested-btn' %>
+  <%= link_to 'Não me interesso mais', interest_post_path(@post, type: "uninterested"), method: :put, class: 'btn', id: 'uninterested-btn' %>
 <% else %>
-  <%= link_to 'Me interessei!', interest_post_path(@post, type: "interested", method: :put), class: 'btn', id: 'interested-btn' %>
+  <%= link_to 'Me interessei!', interest_post_path(@post, type: "interested"), method: :put, class: 'btn', id: 'interested-btn' %>
 <% end %>
