--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :password %><br>
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
   </div>
   <div class="field">
     <%= f.label :password_confirmation %><br>
-    <%= f.text_field :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
   </div>
   <div class="field">
     <%= f.label :address %><br>
@@ -37,7 +37,7 @@
   </div>
   <div class="field">
     <%= f.label :birth %><br>
-    <%= f.datetime_select :birth %>
+    <%= f.date_field :birth %>
   </div>
 	<div class="form-group">
     <%= f.label :avatar, class: 'col-sm-2 control-label'  %>
