Improving layout for signup form

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -15,3 +15,12 @@
   margin-left: 9%;
 
 }
+
+#new_user, #signup-card {
+  width: 50%;
+  margin: 0 auto;
+}
+
+#signup-button {
+  margin-left: 40%;
+}
