--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,10 @@
-<h1>New User</h1>
+<div class="col s12" id="signup-card">
+  <div class="card yellow darken-3">
+    <div class="card-content white-text">
+      <span class="card-title">Cadastre-se</span>
+    </div>
+  </div>
+</div>
 
 <%= render 'form' %>
 
