Creating report_list action

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,6 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#post-card {
+  width: 50%;
+  margin: 0 auto;
+}
+
+#post-new {
+  width: 50%;
+  margin: 0 auto;
+}
+
 .post-profile-image {
     height: 50%;
 }
