--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,10 @@
-<h1>New Post</h1>
+<div class="col s12" id="post-card">
+  <div class="card yellow darken-3">
+    <div class="card-content white-text">
+      <span class="card-title">Crie uma publicação!</span>
+    </div>
+  </div>
+</div>
 
 <%= render 'form' %>
 
