--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -24,3 +24,33 @@
 #signup-button {
   margin-left: 40%;
 }
+
+#report-user {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 5%;
+}
+
+#submit-button {
+  margin-left: 36%;
+}
+
+#report-sender {
+  width: 5%;
+}
+
+#report-sender > a > img {
+  border-radius: 100%;
+  height: 30%;
+}
+
+#users-report {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 2%;
+}
+
+.report {
+  border-style: solid;
+  border-color: gainsboro;
+}
