--- a/app/views/users/report_user.html.erb
+++ b/app/views/users/report_user.html.erb
@@ -1,11 +1,13 @@
-<%= form_tag reported_path, method: :post do |t| %>
+<div id="report-user">
+  <%= form_tag reported_path, method: :post do |t| %>
 
-  <%= hidden_field_tag :user_id , params[:id] %>
+    <%= hidden_field_tag :user_id , params[:id] %>
 
-  <%= label_tag :reason %><br>
-  <%= text_field_tag :reason %>
+    <%= label_tag :reason %><br>
+    <%= text_field_tag :reason %>
 
-  <p><%= submit_tag ("Denunciar") %>
-  </div>
+    <p><%= submit_tag ("Denunciar"), id: 'submit-button', class: 'btn btn-primary' %>
+    </div>
 
-<% end %>
+  <% end %>
+</div>
