--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
       <%end%>
     </table>
 
-    <%= link_to 'Denunciar usuário',
-    "#{@user.id}/report_user", class: "btn btn-info red darken-4", id: "edit-path" %>
+    <%= link_to 'Denunciar usuário', report_user_url(@user), class: "btn btn-info red darken-4", id: "edit-path" %>
+    <%= link_to 'Denúncias', reports_list_url(@user), class:'btn btn-primary' %>
   </div>
 </div>
