--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,12 +5,12 @@
       <tr><td>Nome:<%= @user.name%></td></tr>
       <tr><td>E-mail:<%= @user.email%></td></tr>
       <tr><td>Telefone:<%= @user.phone%></td></tr>
-      <%if !(@user.interests.blank?) %>
+      <% unless @user.interests.blank? %>
         <tr><td>Interressados:<%= @user.interests%></td></tr>
       <%end%>
     </table>
 
-    <%= link_to 'Denunciar usuário', report_user_url(@user), class: "btn btn-info red darken-4", id: "edit-path" %>
+    <%= link_to 'Denunciar usuário', "#{@user.id}/report_user", class: "btn btn-info red darken-4", id: "edit-path" unless @user == current_user %>
     <%= link_to 'Denúncias', reports_list_url(@user), class:'btn btn-primary' %>
   </div>
 </div>
