Starting send mensagem among users

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -15,7 +15,13 @@
     <%= f.label :text %><br>
     <%= f.text_field :text %>
   </div>
+ <div class="field">                
+                                          
+     <%= f.label "Destinatario" %><br>
+     <%= f.number_field :receiver_id %>
+ </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
