--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div#message
+{
+  padding: 5px 20px 5px 20px;
+  background-color: #FFB833;
+  margin: 20px 0 20px 0;
+  color: #000000;
+} 
