--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -17,11 +17,10 @@
   </div>
  <div class="field">                
                                           
-     <%= f.label "Destinatario" %><br>
-     <%= f.number_field :receiver_id %>
+     <%= f.label :receiver_id %><br>
+     <%= f.text_field :receiver_name %>
  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
-
