--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -54,3 +54,15 @@
   border-style: solid;
   border-color: gainsboro;
 }
+
+#form-login {
+  margin-top: 30px;
+}
+
+#signup-box {
+  margin-top: 30px;
+}
+
+#signup-box > div {
+  background-color: #e8c351 !important;
+}
