--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -39,3 +39,19 @@
   margin-left: 40%;
   text-overflow: break-line;
 }
+
+.order-content {
+    float: right;
+}
+
+.order-content > h6 {
+    text-align: center;
+}
+
+.posts-header {
+    margin-bottom: 20px;
+}
+
+#nav-mobile > li:nth-child(2) {
+  width: 105px !important;
+}
