--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -66,3 +66,20 @@
 #signup-box > div {
   background-color: #e8c351 !important;
 }
+
+.input-field > label {
+  color: white !important;
+}
+
+.input-field > input {
+  border-bottom-color: white !important;
+}
+
+.new-buttons {
+  margin-left: 38%;
+}
+
+#signup-box-button {
+  margin-left: 38%;
+  color: white;
+}
