Improving layout of posts index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 </head>
 
-<body style="background-image: url('images/background.png');">
+<body style="background-image: url('/assets/background.png');">
   <nav>
     <div class="nav-wrapper lime darken-3" id="header">
       <span class="logo">
