--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -51,3 +51,13 @@
 .posts-header {
     margin-bottom: 20px;
 }
+
+#post-content {
+  background-color: #EBDABC !important;
+  width: 96%;
+  margin-left: 2%;
+}
+
+#post-info > p {
+  color: black;
+}
