--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
 
     <%= link_to 'Denunciar usuário', "#{@user.id}/report_user", class: "btn btn-info red darken-4", id: "edit-path" unless @user == current_user %>
     <%= link_to 'Denúncias', reports_list_url(@user), class:'btn btn-primary' if current_user.role_admin? %>
+    <%= link_to 'Minhas Notícias', my_articles_url(@user), class:'btn btn-primary' %>
     <%= link_to 'Posts interessados', user_interested_post_url(@user), class:'btn btn-primary' %>
 
   </div>
