Adding content to posts index

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -61,3 +61,25 @@
 #post-info > p {
   color: black;
 }
+
+#post-info > h3 {
+  color: black;
+}
+
+#post-content-box {
+  margin-top: 10px;
+}
+
+.post-plus-content {
+  width: 96%;
+  margin-left: 2%;
+}
+
+#order-posts {
+  height: 80px;
+
+  h6 {
+    text-align: center;
+    font-weight: bold;
+  }
+}
