--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,17 @@
-<div class="posts-header">
+<div class="row post-plus-content">
+  <div class="col s1">
+    <%= link_to new_user_post_url, class: "btn-floating btn-large waves-effect waves-light red", style: 'margin: 0 0 1% 1%;' do %>
+      <i class="material-icons">add</i>
+    <% end %>
+  </div>
 
-  <%= link_to new_user_post_url, class: "btn-floating btn-large waves-effect waves-light red", style: 'margin: 0 0 1% 1%;' do %>
-    <i class="material-icons">add</i>
-  <% end %>
+  <div class="col s9"></div>
 
-  <span class="order-content">
+  <div class="col s2 card" id="order-posts">
     <h6>Ordenar</h6>
     <%= link_to "Data (mais recente primeiro)", posts_path(order: "date_desc") %><br>
     <%= link_to "Data (mais antiga primeiro)", posts_path(order: "date_asc") %>
-  </span>
+  </div>
 </div>
 
 <table>
@@ -16,14 +19,28 @@
     <% @posts.each do |post| %>
 
         <div class="card" id="post-content">
-          <div class="card-content white-text row" id='form-login'>
+          <div class="card-content white-text row" id='post-content-box'>
             <div class="col s3">
               <%= link_to(image_tag(post.animal.avatar.url(:thumb), class:'post-profile-image'), post_path(post)) %>
             </div>
             <div class="col s9" id="post-info">
-              <p><%= post.location %></p>
-              <p><%= post.text %></p>
-              <p><%= post.created_at %></p>
+              <h3><%= post.text %></h3>
+              <p>Em <%= post.location %></p>
+              <% if post.animal.vaccined? %>
+                <span style="color: black;">
+                  <i class="small material-icons" style="color: green;">done</i> Vacinado
+                </span>
+              <% end %>
+
+              <% if post.animal.castrated? %>
+                <span style="color: black;">
+                  <i class="small material-icons" style="color: green;">done</i> Castrado
+                </span>
+              <% end %>
+
+              <p>Tamanho: <%= post.animal.size %>
+
+              <p class="created-at">Criado por <%= post.user.name %> em <%= post.created_at.strftime("%d %b. %Y") %></p>
             </div>
           </div>
         </div>
