--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,9 @@ nav {
 }
 
 .whole-content {
-    margin-top: 80px;
+    width: 80%;
+    background: white !important;
+    margin: 5% auto 0 auto;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
@@ -55,4 +57,8 @@ nav {
 
 #posts-header-btn {
     width: 105px !important;
+}
+
+.article-content {
+  margin-top: 5%;
 }
