--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <nav>
     <div class="nav-wrapper lime darken-3" id="header">
       <span class="logo">
+        <%= link_to image_tag('logo.png', class: 'image-logo'), root_path %>
         <%= link_to "Audopt", root_path, class: "brand-logo" %>
       </span>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
