--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,35 +1,47 @@
 <div class="counter">
-  <div class="card blue-grey darken-1" style="width: 50%; margin: 0 25% 0 25%">
+  <div class="card blue-grey darken-1" style="width: 50%; margin: 100px 25% 30px 25%">
           <div class="card-content white-text" style="text-align: center">
-            <span class="card-title">Contribuiçao do Audopt</span>
-            <p><%= "Animais adotados: #{Pet.instance.qtd}" %></p>
+            <span class="card-title"><strong>Contribuição do Audopt</strong></span>
+            <p><%= "Animais adotados até agora: #{Pet.instance.qtd}" %></p>
           </div>
   </div>
 
 </div>
 
-<div class="dog" style="display: flex;">
-  <div class="image-dog" style="width: 40%; height: 400px; background: url('/assets/dog.png') no-repeat; background-size: contain; ">
+<div class="dog row" style="display: flex; margin-top: 30px;">
+  <div class="image-dog col s1" style="width: 400px; height: 400px; background: url('/assets/dog.png') no-repeat; background-size: contain; ">
   </div>
-  <div class="info-dog" style="width: 50%; margin-top: 10%;">
+  <div class="info-dog col s5" style="width: 50%; margin-top: 10%;">
     <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Amor aos Animais </span>
+              <span class="card-title"><strong>Amor aos Animais</strong></span>
               <p>Animais abandonados podem causar diversos malefícios para você e para sua cidade, como doenças e acidentes.
             </div>
     </div>
   </div>
 </div>
 
-<div class="cat" style="display: flex;">
-  <div class="info-cat" style="width: 50%; margin-top: 10%;">
+<div class="cat row" style="display: flex;">
+  <div class="info-cat col s1" style="width: 50%; margin-top: 10%;">
     <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Solidariedade</span>
+              <span class="card-title"><strong>Solidariedade</strong></span>
               <p>Para melhorar a situação, seja parte da maior rede social de adoções de animais do Brasil!</p>
             </div>
     </div>
   </div>
-  <div class="image-cat" style="width: 40%; height: 400px; background: url('/assets/cat.jpg') no-repeat; background-size: contain;">
+  <div class="image-cat col s6" style="width: 400px; height: 400px; background: url('/assets/cat.jpg') no-repeat; background-size: contain;">
+  </div>
+</div>
+
+<div id="signup-box">
+  <div class="card blue-grey darken-3">
+    <div class="card-content white-text">
+      <span class="card-title">Não está cadastrado?</span>
+      <p>Venha para a maior comunidade de adoções de animais do Brasil! :)</p>
+    </div>
+    <div class="card-action">
+      <%= link_to "Cadastre-se!", new_user_path, id: "signup-box-button" %>
+    </div>
   </div>
 </div>
